<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Railway</string>
    <string name="main_text" translatable="false">Hello My World!</string>
    <string name="submit" tools:ignore="MissingTranslation">SUBMIT</string>
    <string name="new_activity" tools:ignore="MissingTranslation">New Activity</string>
    <string name="mainactivity">MainActivity</string>
    <string name="sing_in">サインイン</string>
    <string name="login">ログイン</string>
    <string name="user_name_editText_label">ユーザ名を入力してください</string>
    <string name="user_email_editText_label">メールアドレスを入力してください</string>
    <string name="user_password_editText_label">パスワードを入力してください</string>
    <string name="user_entry">アカウント作成</string>
    <string name="check_name">ユーザ名は3文字以上にしてください</string>
    <string name="check_email">有効なメールアドレスを入力してください</string>
    <string name="check_password">大文字、小文字、数字を含む8文字以上のパスワードを入力してください</string>
    <string name="preference">Preference</string>
    <string name="token_key">token_key</string>
    <string name="logout">ログアウト</string>
    <string name="User_Info_Editor">ユーザ情報編集</string>
    <string name="user_name_edit_editText_label">変更するユーザー名を入力してください</string>
    <string name="user_info_edit">ユーザ名を変更</string>
    <string name="bookreview">BookReview</string>
    <string name="textview_label_review">レビュー</string>
    <string name="book_title_editText_label">タイトルを入力してください</string>
    <string name="book_url_editText_label">URLを入力してください</string>
    <string name="book_detail_editText_label">本の概要を入力してください</string>
    <string name="book_review_editText_label">本の感想を入力してください</string>
    <string name="post_button_label">送信</string>
    <string name="check_title">1文字以上のタイトルを入力してください</string>
    <string name="check_url">https:// または http:// で始まるURLを入力してください</string>
    <string name="check_detail">1文字以上の概要を入力してください</string>
    <string name="check_review">1文字以上の感想を入力してください</string>
    <string name="edit_user_info_success">にユーザー名を変更しました</string>
    <string name="post_review_success">レビューの投稿に成功しました</string>
    <string name="bookid">bookId</string>
    <string name="textview_label_url">URL</string>
    <string name="fail_get_bookdetail">本の詳細情報の取得に失敗しました</string>
    <string name="fail_network">ネットワークに繋がっていません</string>
    <string name="refresh">更新しました</string>
    <string name="refresh_error">更新に失敗しました</string>
</resources>
