<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 更新 -->
    <item
            android:id="@+id/action_update"
            android:icon="@drawable/outline_cached_24"
            android:title="@string/refresh"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_UserInfoEdit"
            android:orderInCategory="100"
            android:showAsAction="never|withText"
            android:title="@string/User_Info_Editor"
            tools:ignore="AppCompatResource" />
    <item
            android:id="@+id/action_logout"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/logout"
            tools:ignore="AppCompatResource" />
</menu>
